  * Fix spurious warning <stack> / <stack> 
  * Fix spurious warnings for sets module about __cmp__, __hash__
  * Changed abstract check to require raising NotImplementedError
    rather than raising any error
  * Fix spurious warnings in Python 2.4 for Using is (not) None warnings
  * Fix spurious warnings for some instances of No class attribute found

Version 0.8.14   - 6 June 2004
  * Fix spurious warning in Python 2.3+ when doing a,b = 1,2
  * Add warning to check for "if s.find(str):"
      this should be "if s.find(str) >= 0:" when s is a string
  * Fix spurious warning when using augmented assignment (e.g., x += x)
  * Fix spurious warning when doing x = not x
  * Fix spurious warning for invalid arg count when calling a staticmethod
  * Fix spurious warning for setting a variable to itself when:  x, y, z = x
  * Fix spurious warning when doing some binary operations:  self.a ^ self.b
  * Fix crash in STORE_ATTR with some list comprehensions in Python 2.2
  	e.g., a.a = [x for x in range(2) if x > 1]
  * Support Tk 8.4 and above in the GUI (change col= to column=)

Version 0.8.13   - 18 November 2003
  * Add -s/--shadowbuiltin option to warn when overriding a builtin
  * Add warning when assigning a variable to itself
  * Add warning when dividing a variable by itself
  * Add warnings when using a bit-wise operator with the same variable (a & a)
  * Add warning when passing a constant string to getattr()/setattr()
  * Add --special option to check for __special__ (reserved) method names
    and that their signature (argument count) is correct
  * Add warning for using __getattribute__ in an old-style class
  * Suppress 'self as first argument' warning for static and class methods
  * Add --classmethodargs option to specify first argument name
    for class methods

Version 0.8.12   - 23 December 2002
  * Add --isliteral option to warn when using is/is not against literal
    (e.g., XXX is 5    YYY is not 'abcdef', etc)